--- a/package.json
+++ b/package.json
@@ -1,18 +1,33 @@
 {
   "name": "was-tested",
-  "version": "0.1.0",
   "description": "Code coverage proxy",
-  "main": "index.js",
+  "version": "0.2.0",
+  "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "bin": {
     "was-tested": "./index.js"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "bugs": {
+    "url": "https://github.com/bahmutov/was-tested/issues"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:bahmutov/was-tested.git"
+  "dependencies": {
+    "check-types": "1.4.0",
+    "http-proxy": "1.7.1",
+    "istanbul": "0.3.2",
+    "lazy-ass": "0.5.3",
+    "optimist": "0.6.1"
   },
+  "devDependencies": {
+    "grunt": "0.4.5",
+    "grunt-contrib-jshint": "0.10.0",
+    "grunt-deps-ok": "0.5.1",
+    "grunt-nice-package": "0.9.2",
+    "matchdep": "0.3.0",
+    "pre-git": "0.1.1"
+  },
+  "engines": {
+    "node": "> 0.10.*"
+  },
+  "homepage": "https://github.com/bahmutov/was-tested",
   "keywords": [
     "testing",
     "code",
@@ -22,17 +37,14 @@
     "test",
     "proxy"
   ],
-  "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/bahmutov/was-tested/issues"
+  "main": "index.js",
+  "pre-commit": "npm test",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:bahmutov/was-tested.git"
   },
-  "homepage": "https://github.com/bahmutov/was-tested",
-  "dependencies": {
-    "check-types": "1.4.0",
-    "http-proxy": "1.7.1",
-    "istanbul": "0.3.2",
-    "lazy-ass": "0.5.3",
-    "optimist": "0.6.1"
+  "scripts": {
+    "test": "grunt"
   }
 }
