--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "was-tested",
   "description": "Code coverage proxy",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "bin": {
     "was-tested": "./index.js"
@@ -23,7 +23,9 @@
     "grunt": "0.4.5",
     "grunt-contrib-jshint": "0.10.0",
     "grunt-deps-ok": "0.5.1",
+    "grunt-help": "0.4.1",
     "grunt-nice-package": "0.9.2",
+    "grunt-readme": "0.4.5",
     "matchdep": "0.3.0",
     "pre-git": "0.1.1"
   },
