--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "istanbul": "0.3.2",
     "lazy-ass": "0.5.3",
     "optimist": "0.6.1",
+    "quote": "0.2.2",
     "update-notifier": "0.2.2"
   },
   "devDependencies": {
