--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "update-notifier": "0.2.2"
   },
   "devDependencies": {
+    "eslint-rules": "0.1.1",
     "grunt": "0.4.5",
     "grunt-contrib-jshint": "0.10.0",
     "grunt-deps-ok": "0.5.1",
+    "grunt-eslint": "2.1.0",
     "grunt-help": "0.4.1",
     "grunt-nice-package": "0.9.2",
     "grunt-readme": "0.4.5",
