--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "was-tested",
   "description": "Code coverage proxy",
-  "version": "0.9.0",
+  "version": "0.0.0-semantic-release",
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "bin": {
     "was-tested": "./index.js"
@@ -34,7 +34,8 @@
     "grunt-nice-package": "0.9.2",
     "grunt-readme": "0.4.5",
     "matchdep": "0.3.0",
-    "pre-git": "0.1.1"
+    "pre-git": "0.1.1",
+    "semantic-release": "4.3.5"
   },
   "engines": {
     "node": "> 0.10.*"
@@ -55,9 +56,10 @@
   "preferGlobal": true,
   "repository": {
     "type": "git",
-    "url": "git@github.com:bahmutov/was-tested.git"
+    "url": "https://github.com/bahmutov/was-tested.git"
   },
   "scripts": {
-    "test": "grunt"
+    "test": "grunt",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   }
 }
