--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
   "bugs": {
     "url": "https://github.com/bahmutov/was-tested/issues"
   },
+  "config": {
+    "pre-git": {
+      "commit-msg": "simple",
+      "pre-commit": ["npm test"],
+      "pre-push": [],
+      "post-commit": [],
+      "post-checkout": [],
+      "post-merge": []
+    }
+  },
   "contributors": [],
   "dependencies": {
     "check-more-types": "1.1.1",
@@ -34,7 +44,7 @@
     "grunt-nice-package": "0.9.2",
     "grunt-readme": "0.4.5",
     "matchdep": "0.3.0",
-    "pre-git": "0.1.1",
+    "pre-git": "3.8.3",
     "semantic-release": "4.3.5"
   },
   "engines": {
@@ -52,7 +62,6 @@
   ],
   "license": "MIT",
   "main": "index.js",
-  "pre-commit": "npm test",
   "preferGlobal": true,
   "repository": {
     "type": "git",
