chore(git): latest pre-git

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "config": {
     "pre-git": {
       "commit-msg": "simple",
-      "pre-commit": ["npm test"],
+      "pre-commit": [
+        "npm test"
+      ],
       "pre-push": [],
       "post-commit": [],
       "post-checkout": [],
