--- a/package.json
+++ b/package.json
@@ -25,24 +25,24 @@
   "dependencies": {
     "check-more-types": "2.20.2",
     "ecstatic": "1.4.0",
-    "http-proxy": "1.8.1",
+    "http-proxy": "1.13.2",
     "istanbul": "0.4.3",
     "lazy-ass": "1.4.0",
     "optimist": "0.6.1",
-    "quote": "0.2.2",
-    "rimraf": "2.2.8",
-    "update-notifier": "0.2.2"
+    "quote": "0.4.0",
+    "rimraf": "2.5.2",
+    "update-notifier": "0.6.3"
   },
   "devDependencies": {
-    "grunt": "0.4.5",
+    "grunt": "1.0.1",
     "grunt-cli": "1.2.0",
-    "grunt-deps-ok": "0.5.2",
+    "grunt-deps-ok": "0.9.0",
     "grunt-help": "0.5.0",
-    "grunt-nice-package": "0.9.2",
+    "grunt-nice-package": "0.10.2",
     "grunt-readme": "0.4.5",
-    "matchdep": "0.3.0",
+    "matchdep": "1.0.1",
     "pre-git": "3.8.3",
-    "semantic-release": "4.3.5",
+    "semantic-release": "6.2.1",
     "standard": "6.0.8",
     "standard-format": "2.1.1"
   },
@@ -51,13 +51,13 @@
   },
   "homepage": "https://github.com/bahmutov/was-tested",
   "keywords": [
-    "testing",
     "code",
     "coverage",
-    "testing",
     "istanbul",
+    "proxy",
     "test",
-    "proxy"
+    "testing",
+    "testing"
   ],
   "license": "MIT",
   "main": "index.js",
@@ -67,12 +67,12 @@
     "url": "https://github.com/bahmutov/was-tested.git"
   },
   "scripts": {
-    "test": "grunt",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "pretest": "npm run format && npm run lint",
-    "lint": "standard --verbose *.js src/*.js",
-    "format": "standard-format -w *.js src/*.js",
+    "demo-8080": "node index.js --target http://localhost:8080",
     "demo-foo-bar": "node index.js --target http://glebbahmutov.com/foo-bar/ --host glebbahmutov.com",
-    "demo-8080": "node index.js --target http://localhost:8080"
+    "format": "standard-format -w *.js src/*.js",
+    "lint": "standard --verbose *.js src/*.js",
+    "pretest": "npm run format && npm run lint",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "test": "grunt"
   }
 }
