--- a/package.json
+++ b/package.json
@@ -34,13 +34,6 @@
     "update-notifier": "0.6.3"
   },
   "devDependencies": {
-    "grunt": "1.0.1",
-    "grunt-cli": "1.2.0",
-    "grunt-deps-ok": "0.9.0",
-    "grunt-help": "0.5.0",
-    "grunt-nice-package": "0.10.2",
-    "grunt-readme": "0.4.5",
-    "matchdep": "1.0.1",
     "pre-git": "3.8.3",
     "semantic-release": "6.2.1",
     "standard": "6.0.8",
@@ -73,6 +66,6 @@
     "lint": "standard --verbose *.js src/*.js",
     "pretest": "npm run format && npm run lint",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "test": "grunt"
+    "test": "echo Write tests",
   }
 }
